# python-dev

./: .envrc  .gitignore  Dockerfile  Dockerfile_nemo  Makefile  docker-compose-nemo.yaml  docker-compose.yaml  main.py  nemo.ipynb  pyproject.toml  streaming.py
exp/: transcribe.py  transcribe_kotobawhisper.py  transcribe_nue.py  transcribe_reazonespnet.py  transcribe_reazonnemo.py  transcribe_results_espnet.csv
exp/offline-asr/: evaluate.py  transcribe.ipynb  transcribe_fasterkotobawhisper.py  transcribe_nemo.py  transcribe_results_kotobawhisper.csv
