[tool.poetry]
name = "python-dev"
version = "0.1.0"
description = ""
authors = ["sinhat98 <sinhat897205@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "*"
torchvision = "*"
torchaudio = "*"
librosa = "^0.10.2.post1"
onnxruntime = "^1.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
