[tool.poetry]
name = "python-dev"
version = "0.1.0"
description = ""
authors = ["sinhat98 <sinhat897205@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1"
torchvision = "^0.18"
torchaudio = "^2.3"
librosa = "^0.10.2.post1"
onnxruntime = "^1.18.0"
jupyterlab = "*"
jiwer = "^3.0.4"
mecab-python3 = "^1.0.9"
ruff = "^0.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
